@@ -1,5 +1,8 @@
 1.3-19
 
+* magic.c::mgcv_mmult modified so that all inner loop calculations are 
+  optimal (i.e. inner loop pointers increments are all 1).
+
 * `smooth.construct' functions for "cc" and "cr" smooths now increase `k'
   to the minimum possible value (and warn), if it's too low. 
 
